assets/main.css
/**
 * Reset some basic elements
 */
body, h1, h2, h3, h4, h5, h6,
p, blockquote, pre, hr,
dl, dd, ol, ul, figure {
    margin: 0;
}

/**
 * Basic styling
 */
body {
    font: 400 16px/1.5 -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
    color: #111;
    background-color: #fdfdfd;
    -webkit-text-size-adjust: 100%;
    -webkit-font-feature-settings: "kern" 1;
    -moz-font-feature-settings: "kern" 1;
    -o-font-feature-settings: "kern" 1;
    font-feature-settings: "kern" 1;
    font-kerning: normal;
    display: flex;
    min-height: 100vh;
    flex-direction: column;
}

/**
 * Set `margin-bottom` to maintain vertical rhythm
 */
h1, h2, h3, h4, h5, h6,
p, blockquote, pre,
ul, ol, dl, figure,
.highlight {
    margin-bottom: 15px;
}

/**
 * `main` element
 */
main {
    display: block; /* Default value of `display` of `main` element is 'inline' in IE 11. */
}

/**
 * Images
 */
img {
    max-width: 100%;
    vertical-align: middle;
}

/**
 * Figures
 */
figure > img {
    display: block;
}

figcaption {
    font-size: 14px;
}

/**
 * Blockquotes
 */
blockquote {
    color: #828282;
    border-left: 4px solid #e8e8e8;
    padding-left: 15px;
    font-size: 18px;
    letter-spacing: -1px;
    font-style: italic;
}

/**
 * Code formatting
 */
pre,
code {
    font-size: 15px;
    border: 1px solid #e8e8e8;
    border-radius: 3px;
    background-color: #eef;
}

code {
    padding: 1px 5px;
}

pre {
    padding: 8px 12px;
    overflow-x: auto;
}

pre > code {
    border: 0;
    padding-right: 0;
    padding-left: 0;
}

/**
 * Wrapper
 */
.wrapper {
    max-width: -webkit-calc(800px - (30px * 2));
    max-width: calc(800px - 30px * 2);
    margin-right: auto;
    margin-left: auto;
    padding-right: 30px;
    padding-left: 30px;
}

@media screen and (max-width: 800px) {
    .wrapper {
        max-width: -webkit-calc(800px - (30px));
        max-width: calc(800px - (30px));
        padding-right: 15px;
        padding-left: 15px;
    }
}

/**
 * Icons
 */
.svg-icon {
    width: 16px;
    height: 16px;
    display: inline-block;
    fill: #828282;
    padding-right: 5px;
    vertical-align: text-top;
}

/**
 * Tables
 */
table {
    margin-bottom: 30px;
    width: 100%;
    text-align: left;
    color: rgb(62.9, 62.9, 62.9);
    border-collapse: collapse;
    border: 1px solid #e8e8e8;
}

table tr:nth-child(even) {
    background-color: rgb(247.3, 247.3, 247.3);
}

table th, table td {
    padding: 10px 15px;
}

table th {
    background-color: rgb(239.65, 239.65, 239.65);
    border: 1px solid rgb(221.8, 221.8, 221.8);
    border-bottom-color: rgb(201.4, 201.4, 201.4);
}

table td {
    border: 1px solid #e8e8e8;
}

/**
 * Page header
 */
.page-header {
    margin-top: 3em;
    min-height: 56px;
    position: relative;
}

@media screen and (max-width: 800px) {
    .page-header {
        margin-top: 1em;
    }
}

.page-title {
    font-size: 26px;
    font-weight: bold;
    letter-spacing: -1px;
    margin-bottom: 0;
}

.page-description {
    border-bottom: 1px solid #e8e8e8;
    color: #828282;
    padding-top: 8px;
    padding-bottom: 8px;
}

/**
 * Site footer
 */
.site-footer {
    border-top: 1px solid #e8e8e8;
    margin-bottom: 8px;
}

/**
 * Page content
 */
.page-content {
    padding: 30px 0;
    flex: 1;
}

.post-list {
    list-style: none;
    padding: 0;
}

.post-list > li {
    margin-bottom: 12px;
}

.post-meta {
    font-size: 10px;
    color: #828282;
}

